<resources>
    <string name="app_name" translatable="false">Cryptofolio</string>
    <string name="Title1" translatable="false">CRYPTO</string>
    <string name="Title2" translatable="false">FOLIO</string>

    <string name="btc" translatable="false">BTC</string>
    <string name="eth" translatable="false">ETH</string>
    <string name="ltc" translatable="false">LTC</string>
    <string name="bitcoin" translatable="false">Bitcoin:</string>
    <string name="ethereum" translatable="false">Ethereum:</string>
    <string name="litecoin" translatable="false">Litecoin:</string>

    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about">About</string>

    <string name="_0" translatable="false">0€</string>
    <string name="ok" translatable="false">OK</string>
    <string name="quantity">Quantity</string>
    <string name="paid">Paid(USD)</string>

    <string name="email" translatable="false">E-mail</string>
    <string name="edt_feedback">Write your feedback</string>
    <string name="btn_feedback">Send Feedback</string>
    <string name="title_activity_menu" translatable="false">Menu</string>
    <string name="press" translatable="false">Refresh</string>
    <string name="support_txt">If you have any questions or suggestions you can send it through our form.</string>

    <string name="chart">chart</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_activity_swimpe_frames" translatable="false">swimpeFrames</string>
    <string name="github">github</string>
</resources>
