<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu1" android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_coins"
            android:icon="@drawable/ic_menu_coin"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_measures"
            android:icon="@drawable/ic_menu_chart"
            android:title="@string/balance" />
    </group>

    <group android:id="@+id/menu2" android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_support"
                android:title="@string/support" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/about" />
    </group>
</menu>
