<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/btc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp"/>

    <EditText
        android:id="@+id/BTCquantity"
        android:layout_width="100dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <Button
        android:text="@string/ok"
        android:id="@+id/btcOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>