<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/eth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:text="@string/quantity"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/quantityText"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/paidText"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/paid"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"/>

        <EditText
            android:id="@+id/USDpaidETH"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:layout_below="@+id/paidText"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"/>

        <EditText
            android:id="@+id/ETHquantity"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:layout_below="@+id/quantityText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp" />
    </RelativeLayout>

    <Button
        android:text="@string/ok"
        android:id="@+id/ethOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>